--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "mat32"
+name = "mat3"
 version = "0.1.0"
 authors = ["nathanfaucett <nathanfaucett@gmail.com>"]
+
+keywords = ["mat3", "matrix", "3x3"]
+description = "rust matrix 3x3 functions"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/nathanfaucett/rs-mat3.git"
+homepage = "https://github.com/nathanfaucett/rs-mat3"
 
 [dependencies.num]
 git = "https://github.com/nathanfaucett/rs-num.git"
